--- a/demo.tex
+++ b/demo.tex
@@ -95,6 +95,13 @@ Fam pop-up hammock kombucha coloring book. Hashtag gluten-free cornhole poke cra
 
 \chapter{Preliminaries}
 In this chapter, basic definitions and propositions are defined. In this report, all Alexandrov spaces are assumed to have a finite Hausdorff dimension.
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=1in]{Srinakharinwirot_Logo_EN_Color.png}
+\caption{test caption}
+\end{center}
+\end{figure}
  
 \section{Basic definitions} 
 First, we recall the notion of a strainer.
@@ -190,7 +197,8 @@ Furthermore, if a point $p \in M$ is in the $k$-stratum, then
 at some scale comparable to $\mathfrak{r}_p$, $M$ is 
 close in the pointed $C^K$-topology to $N_p \simeq \mathbb{R}^k \times F_p$ where $F_p$ is given in the following table.
 
-\begin{center}
+\begin{table}[h]
+\centering
 \begin{tabular}{|c|l|} 
 \hline
 $k$ & $F_p$ \\ \hline
@@ -199,7 +207,8 @@ $k$ & $F_p$ \\ \hline
 1 & $S^3/\Gamma$, $T^3/\Gamma$, $S^2 \times S^1$, $\mathbb{R}P^3 \# \mathbb{R}P^3$,
 $D^3, S^2 \times_{\mathbb{Z}_2} I, S^1 \times D^2, T^2 \times_{\mathbb{Z}_2} I$ \\ \hline
 \end{tabular}
-\end{center}
+\caption{This is a table}
+\end{table}
 
 \begin{thebibliography}{20}
 \bibitem{davis} B. Davis, D. Maclagan, The card game SET, \emph{Math. Intelligencer}, 25 no. 3 (2003), 33-40, http://dx.doi.org/10.1007/bf02984846.
