--- a/demo_thai.tex
+++ b/demo_thai.tex
@@ -35,7 +35,7 @@
 \usepackage{xltxtra}
 \usepackage{xunicode}
 \XeTeXlinebreaklocale "th"
-\XeTeXlinebreakskip = 0pt plus 1pt 
+\XeTeXlinebreakskip = 0pt plus 0pt 
 \usepackage{fonts-tlwg}
 \defaultfontfeatures{Mapping=tex-text} 
 
@@ -143,6 +143,13 @@ a^2+b^2=c^2
 
 ซิลิกาอินทิกรัลเวสิเคิลแอลกอฮอลิซึม ออโรร่าฮิวมัสไททัน ฟลาโวนอยด์ไททัน เมทริกซ์เวก้า ไดนามิกแอสพาร์แตมสเปิร์ม จุลชีววิทยากำทอนเซ็กเตอร์ แคโรทีนพาราโบลาเวก้าไฮโดรลิก ดอปเปลอร์ฟลาโวนอยด์ ฟิชชันพันธุศาสตร์ซัลเฟตเคอราติน ซิลิกา พันธุศาสตร์ฟิชชัน ปฏิยานุพันธ์อะซีติกออโรราไทฟอยด์ซิลิกา ไพรเมต สเปิร์มแคโรทีนอัลคาไลน์มกราคมไททัน มกราคมคูลอมบ์พฤษภาคมกำทอนไฮเพอร์โบลา เพอร์ออกไซด์สเกลาร์เมทริกซ์
 
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=2in]{Srinakharinwirot_Logo_EN_Color.png}
+\caption{test caption}
+\end{center}
+\end{figure}
+
 \chapter{ความรู้พื้นฐาน}
 ในบทนี้เราจะพูดถึงนิยามและทฤษฎีบทที่จำเป็น
  
@@ -206,7 +213,7 @@ $\displaystyle \lim_{(x,y) \to (a,b)} g(x,y) = M$ จะได้ว่า
 
 \begin{itemize}
 \item สระน้ำโบราณสระหนึ่งเป็นรูปสี่เหลี่ยมผืนผ้ากว้าง 15 เมตร ยาว 25 เมตร นักโบราณคดีวัดความสูงของน้ำในสระทุก ๆ 5 เมตร โดยเริ่มจากมุมหนึ่งของบ่อ ตารางข้างล่างแสดงความสูงของน้ำในสระที่วัดได้ในแต่ละจุด จงหาค่าประมาณของปริมาตรของน้ำในสระ
-
+\begin{table}[h]
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
@@ -217,7 +224,9 @@ $\displaystyle \lim_{(x,y) \to (a,b)} g(x,y) = M$ จะได้ว่า
 15 & 3 & 2 & 5 & 8 & 8 & 6 \\ \hline
 20 & 2 & 2 & 5 & 6 & 8 & 6 \\ \hline
 \end{tabular}
+\caption{ความสูงของน้ำในสระ}
 \end{center}
+\end{table}
 
 \item จงหาค่าของอินทิกรัลต่อไปนี้โดยมองว่าเป็นปริมาตรของทรงตัน
 \begin{enumerate}
@@ -236,7 +245,7 @@ $\displaystyle \lim_{(x,y) \to (a,b)} g(x,y) = M$ จะได้ว่า
 
 \newpage
 
-\begin{thebibliography}{20}
+\begin{thebibliography}{99}
 	
 \bibitem{davis} B. Davis, D. Maclagan, The card game SET, \emph{Math. Intelligencer}, 25 no. 3 (2003), 33-40, http://dx.doi.org/10.1007/bf02984846.
 \bibitem{goldberg} T. Goldberg. Algebra From Geometry in the Card Game SET. \emph{The College Mathematics Journal}, 47 no.4 (2016), 265-273.
