--- a/demo.tex
+++ b/demo.tex
@@ -26,7 +26,7 @@
 %% For basic usage, you do not need to load any other packages or redefine anything.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[ma493]{swumath}
+\documentclass[ma491]{swumath}
 
 %%%%%%%%%%%%%%%%%%%%%%%
 %% Parameters
@@ -35,6 +35,8 @@
 
 %Project title
 \title{Home Life and Social Habits of British Muggles}
+
+\researcharticle{Wigworthy, W. (1987). \emph{Home Life and Social Habits of British Muggles}. Little Red Books.}
 
 \academicyear{2020}
 
@@ -91,9 +93,9 @@ Jujubes biscuit jelly-o halvah candy croissant jelly-o liquorice. Tootsie roll d
 %	Thanks.
 %\end{acknowledgment}
 \tableofcontents
-%\listoftables
+\listoftables
 %\clearpage
-%\listoffigures
+\listoffigures
 
 %%% Main Matter
 \mainmatter
@@ -116,7 +118,7 @@ In this chapter, basic definitions and propositions are defined. In this report,
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=1in]{Srinakharinwirot_Logo_EN_Color.png}
+\includegraphics[width=1.5in]{Srinakharinwirot_Logo_EN_Color.png}
 \caption{test caption}
 \end{center}
 \end{figure}
