--- a/demo_thai.tex
+++ b/demo_thai.tex
@@ -38,7 +38,7 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[ma493]{swumath-thai}
+\documentclass[ma491]{swumath-thai}
 
 %%%%%%%%%%%%%%%%%%%%%%%
 % SETUP FOR THAI LANGUAGE
@@ -100,6 +100,8 @@
 %Project title
 \title{จัตุรัสวิเศษในสมัยกรุงศรีอยุธยา}
 \engtitle{Magic Squares in the Ayutthaya Era}
+
+\researcharticle{ใส่บทความตรงนี้}
 
 %Students (up to 4)
 \numberofmembers{3}
