--- a/demo_thai.tex
+++ b/demo_thai.tex
@@ -38,7 +38,10 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[ma491]{swumath-thai}
+\documentclass[ma493]{swumath-thai}
+
+%Remove this if you don't want to indent the first paragraph
+\usepackage{indentfirst}
 
 %%%%%%%%%%%%%%%%%%%%%%%
 % SETUP FOR THAI LANGUAGE
@@ -52,14 +55,14 @@
 \usepackage{fonts-tlwg}
 \defaultfontfeatures{Mapping=tex-text} 
 
-%\newfontfamily{\thaifont}{THSarabunNew}[Scale = 1.3]
+\newfontfamily{\thaifont}{THSarabunNew}[Scale = 1.3]
 
-\newfontfamily{\thaifont}{THSarabunNew.ttf}[
-	Path, 
-	BoldFont 	= THSarabunNew Bold.ttf,
-       	ItalicFont  = THSarabunNew Italic.ttf,
-       	BoldItalicFont = THSarabunNew BoldItalic.ttf,
-	Scale = 1.3]
+%\newfontfamily{\thaifont}{THSarabunNew.ttf}[
+%	Path, 
+%	BoldFont 	= THSarabunNew Bold.ttf,
+%       	ItalicFont  = THSarabunNew Italic.ttf,
+%       	BoldItalicFont = THSarabunNew BoldItalic.ttf,
+%	Scale = 1.3]
 
 %% Ucharclasses Package is responsible for auto-switching font based on Unicode
 \usepackage[Latin,Thai]{ucharclasses}
@@ -95,7 +98,7 @@
 %% Most are self-explanatory. 
 %%%%%%%%%%%%%%%%%%%%%%%
 
-\academicyear{2563}
+\academicyear{2564}
 
 %Project title
 \title{จัตุรัสวิเศษในสมัยกรุงศรีอยุธยา}
@@ -151,6 +154,11 @@
 วิธีสยาม หรือวิธีเดอ ลา ลูแบร์ เป็นวิธีการง่าย ๆ ในการสร้างจัตุรัสกล (จัตุรัสตัวเลขซึ่งผลรวมของทุกแถว คอลัมน์ และทแยงมุมมีค่าเท่ากัน) ที่มีความกว้างและยาวเป็นจำนวนคี่ใด ๆ วิธีการดังกล่าวถูกนำสู่ฝรั่งเศสในปี ค.ศ. 1688 โดยนักคณิตศาสตร์และทูตชาวฝรั่งเศส ซีมง เดอ ลา ลูแบร์ เมื่อเขาเดินทางกลับประเทศหลังการเดินทางมาเป็นคณะทูตที่ราชอาณาจักรสยามเมื่อปี ค.ศ. 1687 วิธีสยามทำให้การสร้างจัตุรัสกลเป็นไปอย่างตรงไปตรงมา
 \end{abstract}
 
+\clearpage
+%\chapter*{Abstract}
+%Abstract texts
+%\clearpage
+
 %\begin{acknowledgment}
 %	Thanks.
 %\end{acknowledgment}
@@ -171,21 +179,21 @@ a^2+b^2=c^2
 
 พอลิเมอร์ สุริยจักรวาลโพลาไรซ์ กำทอนฟลูออไรด์อะมิโนแคสสินี คอปเปอร์พัลซาร์คอนดักเตอร์ ไทฟอยด์ฟิวชัน อีโบล่าฟอสซิลธันวาคมกำทอน ฟิชชันไดออกไซด์ซิริอุส เอสเตอร์อะมิโนโพลีเอทิลีนเซ็กเมนต์ไททัน โพลิเมอร์ไทรอยด์โวลต์อะมิโนอีโบลา มอนอกไซด์ซิลิกา สเกลาร์แกนีมีด ฟีโรโมนอีโบล่าเทอร์โมเซมิโอเซลทามิเวียร์ ฟลูออไรด์วีก้า โครมาโทกราฟี อะซีติกซิงค์ซิงค์แอมโมเนียมฮับเบิล ฮิวมัสกุมภาพันธ์แคโรทีนแทนนิน
 
-ซิลิกาอินทิกรัลเวสิเคิลแอลกอฮอลิซึม ออโรร่าฮิวมัสไททัน ฟลาโวนอยด์ไททัน เมทริกซ์เวก้า ไดนามิกแอสพาร์แตมสเปิร์ม จุลชีววิทยากำทอนเซ็กเตอร์ แคโรทีนพาราโบลาเวก้าไฮโดรลิก ดอปเปลอร์ฟลาโวนอยด์ ฟิชชันพันธุศาสตร์ซัลเฟตเคอราติน ซิลิกา พันธุศาสตร์ฟิชชัน ปฏิยานุพันธ์อะซีติกออโรราไทฟอยด์ซิลิกา ไพรเมต สเปิร์มแคโรทีนอัลคาไลน์มกราคมไททัน มกราคมคูลอมบ์พฤษภาคมกำทอนไฮเพอร์โบลา เพอร์ออกไซด์สเกลาร์เมทริกซ์
+ซิลิกาอินทิกรัลเวสิเคิลแอลกอฮอลิซึม ออโรร่าฮิวมัสไททัน ฟลาโวนอยด์ไททัน เมทริกซ์เวก้า ไดนามิกแอสพาร์แตมสเปิร์ม จุลชีววิทยากำทอนเซ็กเตอร์ แคโรทีนพาราโบลาเวก้าไฮโดรลิก ดอปเปลอร์ฟลาโวนอยด์ ฟิชชันพันธุศาสตร์ซัลเฟตเคอราติน ซิลิกา พันธุศาสตร์ฟิชชัน ปฏิยานุพันธ์อะซีติกออโรราไทฟอยด์ซิลิกา ไพรเมต สเปิร์มแคโรทีนอัลคาไลน์มกราคมไททัน มกราคมคูลอมบ์พฤษภาคมกำทอนไฮเพอร์โบลา เพอร์ออกไซด์สเกลาร์เมทริกซ์ ดูรูปที่ \ref{swu-logo}
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=2in]{Srinakharinwirot_Logo_EN_Color.png}
-\caption{test caption}
+\includegraphics[width=1.5in]{Srinakharinwirot_Logo_EN_Color.png}
+\caption{test caption} \label{swu-logo}
 \end{center}
 \end{figure}
 
 \chapter{ความรู้พื้นฐาน}
-ในบทนี้เราจะพูดถึงนิยามและทฤษฎีบทที่จำเป็น
+ในบทนี้เราจะพูดถึงนิยามและทฤษฎีบทที่จำเป็น โดยอ้างอิงมาจาก \cite{lang}
  
 \section{นิยามพื้นฐาน} 
 
-\begin{definition}
+\begin{definition} \label{def:triple}
 \emph{อินทิกรัลสามชั้น} (triple integral) ของ $f$ บนกล่องสี่เหลี่ยมมุมฉาก $B$ คือ
 \[ \iiint_B f(x,y,z) \, dV = \lim_{L, M, N \to \infty} \sum_{i = 1}^L \sum_{j = 1}^M \sum_{k = 1}^N f(x_{ijk}^*, y_{ijk}^*, z_{ijk}^*) \Delta V \]
 เมื่อลิมิตหาค่าได้
@@ -193,7 +201,7 @@ a^2+b^2=c^2
  
 \section{ทฤษฎีบทที่จำเป็น}
 
-ระนองพะเยาชัยนาท อุดรธานีระนอง บางกอกบางกอก ลพบุรีโคตรบองมุกดาหารเพชรบุรี ลันตา รัตนาธิเบศร์มหาสารคาม สมุทรปราการทวาราวดีหนองบัวลำภูเลยสมุย ปายสุพรรณบุรีสกลนคร ขอนแก่นประจวบคีรีขันธ์ล้านนาสุพรรณบุรี ตรังสมุทรปราการจันทบุรีสิงห์บุรีชุมพร ตากล้านช้างทวาราวดีสุราษฎร์ธานี ปราจีนบุรีปายนครพนมมุกดาหารสุรินทร์ จตุจักรนครปฐม โคตรบองระนอง ดอนเมืองนครสวรรค์บางปะกง
+จากนิยาม \ref{def:triple} ระนองพะเยาชัยนาท อุดรธานีระนอง บางกอกบางกอก ลพบุรีโคตรบองมุกดาหารเพชรบุรี ลันตา รัตนาธิเบศร์มหาสารคาม สมุทรปราการทวาราวดีหนองบัวลำภูเลยสมุย ปายสุพรรณบุรีสกลนคร ขอนแก่นประจวบคีรีขันธ์ล้านนาสุพรรณบุรี ตรังสมุทรปราการจันทบุรีสิงห์บุรีชุมพร ตากล้านช้างทวาราวดีสุราษฎร์ธานี ปราจีนบุรีปายนครพนมมุกดาหารสุรินทร์ จตุจักรนครปฐม โคตรบองระนอง ดอนเมืองนครสวรรค์บางปะกง
 
 \begin{theorem}[ทฤษฎีบทของฟูบินี]
 ให้ $f$ เป็นฟังก์ชันต่อเนื่องบนสี่เหลี่ยม $R = [a,b] \times [c,d]$ จะได้ว่า
@@ -230,6 +238,8 @@ $\displaystyle \lim_{(x,y) \to (a,b)} g(x,y) = M$ จะได้ว่า
 \begin{proof}
 	เป็นการบ้านของผู้อ่าน
 \end{proof}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%
 %% APPENDIX
